--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-matplotlib==3.1.3
-pandas==1.0.1
 seaborn==0.10.0
+pandas==1.0.1
 streamlit==0.87.0
-scikit_learn==1.0.1
+matplotlib==3.1.3
+scikit_learn==0.24.2
+numpy==1.16.5
